Fixed wrong font-family on version selector

--- a/src/assets/stylesheets/main/_reset.scss
+++ b/src/assets/stylesheets/main/_reset.scss
@@ -101,6 +101,7 @@ button {
   margin: 0;
   padding: 0;
   font-size: inherit;
+  font-family: inherit;
   background: transparent;
   border: 0;
 }
